[package]
name = "attiny85-xmas"
version = "0.1.0"
edition = "2021"

[dependencies]
panic-halt = "1.0.0"
deposit-iter = {git="https://github.com/simonsso/deposit_iter.git", branch="master"}
avrd = {version = "1.0.0", features = ["all-mcus"] }
[dependencies.arduino-hal]
git = "https://github.com/Rahix/avr-hal"
tag = "ravedude-0.1.5"
features = ["trinket"]  # This is the attiny.
[profile.release]
lto = true
panic = "abort"  # fixes eh_personality

